# useful_Skills

./: README.md
DemandSpec/: README.md
demandspec-kit/: CHANGELOG.md  README.md  ROADMAP.md  manifest.json  pyproject.toml
demandspec-kit/commands/claude/: demandspec-ai-fit.md  demandspec-ai-scenario.md  demandspec-prd-to-dev-tasks.md  demandspec-prototype.md
demandspec-kit/commands/codex/: demandspec-archive.md  demandspec-data-rules.md
demandspec-kit/commands/generic/: demandspec-prd.md  demandspec-review.md
demandspec-kit/configs/: config.yaml  standards.md
demandspec-kit/demandspec_cli/: __init__.py  archive.py  changes.py  cli.py  config.py  identifiers.py  resource_access.py  specs.py  validation.py
demandspec-kit/demandspec_cli/configs/: glossary.md  stakeholders.md
demandspec-kit/demandspec_cli/rules/: cursor-demandspec.mdc
demandspec-kit/demandspec_cli/templates/change/: acceptance.md  approval.md  design.md  spec.md
demandspec-kit/docs/: architecture.md  command-reference.md  figma-mastergo-prototype.md  integration-claude-code.md  integration-codex.md  integration-cursor.md  integration-trae.md  overview.md
demandspec-kit/rules/: AGENTS.md  trae-demandspec-rules.md
demandspec-kit/scripts/: install-cli.ps1  install-cli.sh  install-demandspec.ps1  install-demandspec.sh
demandspec-kit/skills/demandspec/: SKILL.md
demandspec-kit/templates/change/: proposal.md  tasks.md
demandspec-kit/tests/: test_archive.py  test_changes.py  test_cli.py  test_example.py  test_identifiers.py  test_resources.py  test_validation.py
(+90 files in other folders)
